log
vie 21 abr 2023 09:57:42 -04: 
 tests:  1|8
total_score: 0/70
03d2eb4
vie 21 abr 2023 10:10:35 -04: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
03d2eb4
vie 21 abr 2023 10:24:13 -04: 
 treemap.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘is_lower’ [-Werror=implicit-function-declaration]
   64 |         if (is_lower(tree->current->pair,key))
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7fbcf7
vie 21 abr 2023 10:24:39 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   64 |         if (lower_than(tree->current->pair,key))
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3085eb
vie 21 abr 2023 10:25:07 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4694aff
vie 21 abr 2023 10:32:48 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0acfdca
vie 21 abr 2023 10:34:42 -04: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:40: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   63 |         if (is_equal(tree,auxkey,key)) return ;
      |                                        ^~~~~~
treemap.c:51:8: note: declared here
   51 | Pair * searchTreeMap(TreeMap * tree, void* key) {
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1223ab5
vie 21 abr 2023 10:34:54 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
892f754
vie 21 abr 2023 10:35:48 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b575c1
